src/integration/ad-group-sync/objects/AdGroupMapping__mdt/fields/AccessType__c.field-meta.xml
<CustomField>
    <fullName>AccessType__c</fullName>
    <label>Access Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>