src/integration/ad-group-sync/objects/AdGroupMapping__mdt/fields/AdGroupIdPreprod__c.field-meta.xml
<CustomField>
    <fullName>AdGroupIdPreprod__c</fullName>
    <label>AD group Id - Preprod</label>
    <length>184</length>
    <type>Text</type>
</CustomField>