src/integration/ad-group-sync/objects/AdGroupMapping__mdt/fields/AdGroupIdProd__c.field-meta.xml
<CustomField>
    <fullName>AdGroupIdProd__c</fullName>
    <label>AD group Id - Prod</label>
    <length>184</length>
    <type>Text</type>
</CustomField>